# dot_tracker

./: .dot_files.toml  .editorconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
src/dot_tracker/: main.py
tests/: test_repo.py
tests/fixtures/: many_config.yml  single_config.yml
